# urban-octo-tribble

./: .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.yaml  load_test_scaling.py  main.py  nginx.conf  pyproject.toml  pytest.ini  test_scaling.sh
.github/: checklists.md
.github/workflows/: tests.yml
alembic/: env.py  script.py.mako
alembic/versions/: 001688113254_user_tier.py  5201e145432f_base_uniqueids_create_update_date.py  76376918368f_user_roles_updatedat_lastlogin.py  dc9c7815e283_initial_tables.py  fdb143b1fb39_increase_short_code_length.py
app/: celery_app.py  dependencies.py  exceptions.py  main.py
app/api/v1/: __init__.py
app/api/v1/routes/: auth.py  documents.py  users.py
app/core/: __init__.py  config.py  consistent_hash.py  constants.py  database.py  extractors.py  notification.py  redis.py  security.py  services.py  shard_manager.py  snowflake.py  taskiq_broker.py  tasks.py
app/middleware/: __init__.py  https_redirect.py  idempotency.py  logging.py  rate_limit.py  security_headers.py  shard_routing.py  versioning.py
app/models/: __init__.py  base.py  chunk.py  document.py  notification.py  query.py  shorturl.py  user.py
app/routes/: agent.py  auth.py  documents.py  memory.py  metrics.py  notifications.py  query.py  search.py  users.py
app/schemas/: __init__.py  agent.py  document.py  events.py  metrics.py  notification.py  pagination.py  query.py  search.py  user.py
app/schemas/v1/: __init__.py  document.py  shorturl.py  user.py
app/services/: __init__.py  agent_memory.py  agent_service.py  agent_state.py  agent_tools.py  chunking.py  embeddings.py  enhanced_agent_state.py  hybrid_search.py  llm.py  metrics_service.py  rag.py  redis_service.py  storage.py  vector_store.py
app/services/ai/: __init__.py  chunking.py  hybrid_search.py  llm.py  query_classifier.py  rag.py
app/services/events/: __init__.py  consumer.py  producer.py
app/services/optimization/: __init__.py  metrics_service.py  shard_service.py
app/services/storage/: __init__.py  minio_adapter.py
app/services/validation/: __init__.py  validators.py
app/tasks/: __init__.py  base.py  chunk_document.py  chunks_embedding.py  document_chunking.py  document_processing.py  webhook_tasks.py
app/utility/: __init__.py  base62Encoder.py  utc_now.py
app/utils/: __init__.py  helpers.py  url_shortener.py
notes/checklists/: Questions_Design-Patterns.md  Testing Workflow.md  architecture_diagrams.md  checklist_api.md  checklist_long.md  checklist_short.md
scripts/: analytics_consumer.py  event_consumer.py
tests/: conftest.py  locustfile.py  test_auth.py  test_auth_comprehensive.py  test_auth_extended.py  test_auth_flows_comprehensive.py  test_chunking.py  test_dependencies.py  test_diagnostic.py  test_documents.py  test_documents_comprehensive.py  test_documents_edge_cases.py  test_documents_endpoints.py  test_exceptions.py  test_file_validation.py  test_health.py  test_middleware.py  test_middleware_comprehensive.py  test_middleware_extended.py  test_models.py  test_performance.py  test_rate_limiting.py  test_redis_service.py  test_storage_comprehensive.py  test_tasks.py  test_url_shortening.py  test_url_shortening_comprehensive.py  test_utils.py  test_utils_extended.py  test_validation.py  test_vector_services.py
