[project]
name = "urban-octo-tribble"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=15.5.0",
    "alembic>=1.18.0",
    "asyncpg>=0.31.0",
    "fakeredis>=2.33.0",
    "fastapi[standard]>=0.128.0",
    "greenlet>=3.3.0",
    "minio>=7.2.20",
    "psycopg2-binary>=2.9.11",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.10.1",
    "redis>=7.1.0",
    "sqlmodel>=0.0.31",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "faker>=40.1.2",
    "httpx>=0.28.1",
    "ipdb>=0.13.13",
    "ipython>=9.9.0",
    "locust>=2.43.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.11",
    "ty>=0.0.11",
    "watchdog>=6.0.0",
]


# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]

ignore = [
    "E501",   # Line too long (formatter handles this)
    "B008",   # Function calls in defaults (FastAPI Depends)
    "ARG001", # Unused arguments (common in FastAPI)
]

# Ty configuration - Astral's ultra-fast type checker
[tool.ty]
[tool.ty.environment]
python-version = "3.13"
root = ["."]

[tool.ty.src]
exclude = ["tests/**", "build/**", "alembic/versions/**"]

[tool.ty.rules]
unresolved-reference = "error"
invalid-assignment = "error"
unresolved-attribute = "error"
call-non-callable = "error"

# Test overrides
[[tool.ty.overrides]]
include = ["tests/**"]
[tool.ty.overrides.rules]
unresolved-reference = "warn"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
asyncio_mode = "auto"
# Explicitly set the loop scope if using pytest-asyncio 0.23+
asyncio_default_test_loop_scope = "function"

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.pytest_env]
DATABASE_URL = "sqlite+aiosqlite:///:memory:"
SECRET_KEY = "ci-test-secret-key"
